k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwa
  namespace: goalixa-pwa
  labels:
    app: pwa
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: pwa
